[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/Invatiation.gd" type="Script" id=2]

[node name="Invatiation" type="HBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
path_link_edit = NodePath("VBoxContainer/LinkEdit")
path_button = NodePath("Button")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="InvatationConfirm" type="Label" parent="."]
visible = false
margin_right = 195.0
margin_bottom = 44.0
grow_horizontal = 0
size_flags_vertical = 1
text = "Invite link copied to clipboard."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 180.0
margin_bottom = 44.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 14.0

[node name="InviteLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0
text = "Invite Link:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 180.0
margin_bottom = 44.0
rect_min_size = Vector2( 180, 26 )
theme = ExtResource( 1 )
text = "link"
clear_button_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 184.0
margin_right = 229.0
margin_bottom = 44.0
rect_min_size = Vector2( 45, 0 )
text = "Join"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_changed" from="VBoxContainer/LinkEdit" to="." method="_text_changed"]
[connection signal="text_entered" from="VBoxContainer/LinkEdit" to="." method="_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
